--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,21 +29,9 @@
         "navLinks": [
             {
                 "type": "Link",
-                "label": "Home",
+                "label": "Copyright Convertify 2024",
                 "underline": "hover",
-                "url": "/"
-            },
-            {
-                "type": "Link",
-                "label": "About",
-                "underline": "hover",
-                "url": "/about"
-            },
-            {
-                "type": "Link",
-                "label": "Documentation",
-                "underline": "hover",
-                "url": "https://docs.netlify.com/visual-editor/overview/"
+                "url": ""
             }
         ]
     }
